bug: fixed gitHub link

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Portfolio- Grace Burke
-This project is meant o showcase my various projects created for IS117 as well as my goals for the future.
+This project is meant to showcase my various projects created for IS117 as well as my goals for the future.
